Adding debug mode to prevent me from spamming GA while running locally. Also updating funstuff.html with more content from the old site

--- a/funstuff.html
+++ b/funstuff.html
@@ -1,6 +1,7 @@
 ---
 layout: page
-title: fun-stuff
+permalink: /funstuff/
+title: Fun Stuff
 ---
 
 <h2>Acting</h2>
@@ -8,22 +9,22 @@ title: fun-stuff
 
 <h3>Mindbrain!</h3>
 <div>
-        <iframe src="http://player.vimeo.com/video/40066624?color=e6e6e6"
-            width="675" height="525" frameborder="0" webkitallowfullscreen=""
-            mozallowfullscreen="" allowfullscreen=""></iframe>
-        <p>
-            <a href="http://vimeo.com/40066624">Mindbrain!</a> from <ahref="http://vimeo.com/user2023576">Bobby McGlynn</a> on Vimeo. <br>
-            "A pushover pencil-pusher meets a pushy drug-pusher, and when push comes to shove, he pulls out all the stops."<br>
-            Written and Directed by: Bobby McGlynn <br>
-        </p>
+    <iframe style="background-color:black; border:none;" src="http://player.vimeo.com/video/40066624?color=e6e6e6"
+        width="675" height="380" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="">
+    </iframe>
+    <h6><a href="http://vimeo.com/40066624">Mindbrain!</a> from <a href="http://vimeo.com/user2023576">Bobby McGlynn</a> on Vimeo.</h6>
+    <p>
+        "A pushover pencil-pusher meets a pushy drug-pusher, and when push comes to shove, he pulls out all the stops."<br>
+        Written and Directed by: Bobby McGlynn<br>
+    </p>
 </div>
 
-<h2>Snippits of Films by Ryan Stevenson</h2>
-
+<h3>Snippits of Films by Ryan Stevenson</h3>
 <div>
-    <iframe src="http://player.vimeo.com/video/23542784" width="675"
-        height="525" frameborder="0" webkitallowfullscreen="" mozallowfullscreen=""
-        allowfullscreen=""></iframe>
+    <iframe style="background-color:black; border:none;" src="http://player.vimeo.com/video/23542784"
+        width="675" height="380" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="">
+    </iframe>
+    <h6><a href="https://vimeo.com/23542784">Films on Digital Video 2006-2011</a> from <a href="https://vimeo.com/23542784">Ryan Stevenson</a> on Vimeo.</h6>
     <p>
         "Six films in six minutes: clips from Macbeth, Millennium, Fellini Aeneid, Loup Garou, Galateia, and Pavane."<br>
         Written, Directed, and Edited by: Ryan Stevenson<br>
@@ -33,5 +34,57 @@ title: fun-stuff
 <h2>Photos</h2>
 
 <div>
-    <img src="https://photos.app.goo.gl/oQ6VS1PLWCi5Zh8Z6" alt="Ariel in the Tempest, 2010">
+    <div style="width:33.28%;margin:0;float:left;width:33.28%;margin:0;">
+        <div style="position:relative;margin:5px;padding:0 8px 8px 0">
+            <div style="position:relative; width:100%; padding:0 0 5%;">
+                <div>
+                    <a href="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0">
+                        <img
+                            src="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0"
+                            width="280"
+                            height="362"
+                            style="border-width:1px;padding:3px;">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="width:33.28%;margin:0;float:left;width:33.28%;margin:0;">
+        <div style="position:relative;margin:5px;padding:0 8px 8px 0">
+            <div style="position:relative; width:100%; padding:0 0 5%;">
+                <div>
+                    <a href="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0">
+                        <img
+                            src="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0"
+                            width="280"
+                            height="362"
+                            style="border-width:1px;padding:3px;">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div style="width:33.28%;margin:0;float:left;width:33.28%;margin:0;">
+        <div style="position:relative;margin:5px;padding:0 8px 8px 0">
+            <div style="position:relative; width:100%; padding:0 0 5%;">
+                <div>
+                    <a href="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0">
+                        <img
+                            src="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0"
+                            width="280"
+                            height="362"
+                            style="border-width:1px;padding:3px;">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<div>
+    <p>As silly as these may look now, all of this was tremendously fun to make.</p>
+</div>
+<!-- <div>
+    <img alt="Ariel in the Tempest, 2010" src="https://lh3.googleusercontent.com/pw/ACtC-3fl6M5W9kwZnYP4-YjG21eARgqY6eIKHWgL5h0lDvZZ7tlVf9deqEFgdb4vlp0HAM5XRj0efTBy2OcLRK1SJcXucsh7SpAoACiai4DqxKReMjlEkNjmGb5GFqh9tq-72Y6BJpniinTjqkVVbvb4QJMq=w556-h720-no?authuser=0">
+    <p><small>May 2010</small></p>
+</div> -->
