Updating http links to https and removing bugged debugging logic

--- a/funstuff.html
+++ b/funstuff.html
@@ -9,10 +9,10 @@ title: Fun Stuff
 
 <h3>Mindbrain!</h3>
 <div>
-    <iframe style="background-color:black; border:none;" src="http://player.vimeo.com/video/40066624?color=e6e6e6"
+    <iframe style="background-color:black; border:none;" src="https://player.vimeo.com/video/40066624?color=e6e6e6"
         width="675" height="380" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="">
     </iframe>
-    <h6><a href="http://vimeo.com/40066624">Mindbrain!</a> from <a href="http://vimeo.com/user2023576">Bobby McGlynn</a> on Vimeo.</h6>
+    <h6><a href="https://vimeo.com/40066624">Mindbrain!</a> from <a href="https://vimeo.com/user2023576">Bobby McGlynn</a> on Vimeo.</h6>
     <p>
         "A pushover pencil-pusher meets a pushy drug-pusher, and when push comes to shove, he pulls out all the stops."<br>
         Written and Directed by: Bobby McGlynn<br>
@@ -21,7 +21,7 @@ title: Fun Stuff
 
 <h3>Snippits of Films by Ryan Stevenson</h3>
 <div>
-    <iframe style="background-color:black; border:none;" src="http://player.vimeo.com/video/23542784"
+    <iframe style="background-color:black; border:none;" src="https://player.vimeo.com/video/23542784"
         width="675" height="380" webkitallowfullscreen="" mozallowfullscreen="" allowfullscreen="">
     </iframe>
     <h6><a href="https://vimeo.com/23542784">Films on Digital Video 2006-2011</a> from <a href="https://vimeo.com/23542784">Ryan Stevenson</a> on Vimeo.</h6>
